PyMaker/datas/object2/RawHTML/i4801/Python_DOC_referPages.elif-sytax-error-python.txt
<div class="post-text" itemprop="text">
<p>I'm new to coding and got an error I don't know how to fix it. It is from codecademy lesson 4.</p>
<pre><code> def hotel_cost(nights):
  return 140 * nights

def plane_ride_cost(city):
  if city == "Charlotte":
    return 183
  elif city == "Tampa":
    return 220
  elif city == "Pittsburgh":
    return 222
  elif city == "Los Angeles":
    return 475
  def rental_car_cost(days):
    cost == days * 40
    if days &gt;= 7:
      cost -= 50
      elif days &gt;= 3
      cost -= 20


File "python", line 17
        elif days &gt;= 3
           ^
    SyntaxError: invalid syntax
</code></pre>
<p>if someone knows what is wrong could you please help.</p>
</div>
<div class="post-text" itemprop="text">
<p>You forgot a <code>:</code></p>
<p>Change <code>elif days &gt;= 3</code>
to
<code>elif days &gt;= 3:</code></p>
<p>And unindent the line</p>
</div>
<div class="post-text" itemprop="text">
<pre><code>if days &gt;= 7:
      cost -= 50
elif days &gt;= 3:
      cost -= 20
</code></pre>
<p>Might want to read this:
<a href="https://docs.python.org/3/tutorial/controlflow.html" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/controlflow.html</a></p>
</div>
<span class="comment-copy">Just unindent that line and put a <code>:</code> at the end...</span>
<span class="comment-copy">colon missing in directive <code>elif days &gt;= 3:</code></span>
